--- a/06_Aug_Arvind_Que_1.ipynb
+++ b/06_Aug_Arvind_Que_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyse and visualize the following datasets using numpy and pandas and matplotlib"
+    "# Analyse and visualize the following datasets using numpy, pandas and matplotlib"
    ]
   },
   {
